--- a/docs/combinational_logic.mdx
+++ b/docs/combinational_logic.mdx
@@ -7,18 +7,18 @@
 ```
 -->
 
-Combinational logic is formed of boolean functions whose outputs are fully
-determined by their current inputs. This is in contrast to sequential logic
+Combinational logic is formed from boolean functions whose outputs are fully
+determined by their current inputs. This is in contrast to sequential logic,
 where the outputs are a function of their current and previous inputs.
 
 At the lowest level, combinational circuits are built from simple primitives such
 as NAND gates (in ASIC designs) or LUTs (in FPGA designs). Building circuits
-with such low-level primitives is tedious, so instead we provide a set of higher
-level primitives with which to design circuits. The `Comb.S` module type
+with such low-level primitives is tedious, so instead, we provide a set of higher-level 
+primitives with which to design circuits. The `Comb.S` module type
 provides these primitives.
 
 Combinational circuits can be thought of as graphs with `wires` (often
-also referred to as `signals`) connecting togther logic operations
+also referred to as `signals`) connecting together logic operations,
 which are the nodes of the graph. These graphs are directed and must
 not contain any cycles.
 
@@ -26,7 +26,7 @@ not contain any cycles.
 
 The fundamental type in Hardcaml is a vector with a specified width. The width
 can be one or more bits. There exists a special signal called `empty` which has
-zero width, but is rarely used and exists more for internal use.
+zero width but is rarely used and exists more for internal use.
 
 The simplest way to create a `Bits.t` value is the `of_string` function.
 
@@ -66,8 +66,8 @@ back to an OCaml value. We can do so with the `to_int` function.
 - : int = 4
 ```
 
-`to_int` has interpreted `x` as an unsigned, three bit, integer value.
-`to_sint` will treat it as a signed, twos complement integer value.
+`to_int` has interpreted `x` as an unsigned, three-bit integer value.
+`to_sint` will treat it as a signed, twos-complement integer value.
 
 ```ocaml
 # to_sint x
@@ -75,19 +75,19 @@ back to an OCaml value. We can do so with the `to_int` function.
 ```
 
 Care should be taken with vector widths that are greater than (or equal to) the
-actual width of an OCaml integer as the conversion will not raise if the value
+actual width of an OCaml integer, as the conversion will not raise if the value
 does not fit.
 
 # Richer constants
 
-Probably the most useful constant generating function is `of_int`.
+Probably the most useful constant-generating function is `of_int`.
 
 ```ocaml
 # of_int ~width:10 514
 - : t = 1000000010
 ```
 
-If the given value is negative it will be sign extended to the appropriate width.
+If the given value is negative, it will be sign extended to the appropriate width.
 
 ```ocaml
 # of_int ~width:10 (-1)
@@ -96,7 +96,7 @@ If the given value is negative it will be sign extended to the appropriate width
 
 The function `of_string` is actually more general than just converting
 binary values. It can also take a specification string which roughly
-follows the form of Verilog constants, ie, `<width>'<format><value>`.
+follows the form of Verilog constants: `<width>'<format><value>`.
 Binary, decimal, octal, and hexadecimal notations are supported.
 
 ```ocaml
@@ -109,8 +109,8 @@ Binary, decimal, octal, and hexadecimal notations are supported.
 ```
 
 If the format specifier is capitalised, the leading bit in the given
-value will be used for sign extension. This is only relevant for the
-binary, octal, and hex specifiers.
+value will be used for sign extension (only relevant for the
+binary, octal, and hex specifiers).
 
 ```ocaml
 # of_string "5'B1101"
@@ -124,14 +124,14 @@ binary, octal, and hex specifiers.
 Hardcaml provides a set of operators providing the usual functions
 such as logical, arithmetic and comparison operations. A key API
 design point is Hardcaml does not encode signedness into the type of
-vectors. Where needed the operator suffix indicates how to interpret
+vectors. Where needed, the operator suffix indicates how to interpret
 the operands. For example, there are two "less than" operators.
 
 - `(<:)` for unsigned less than
-- `(<+)` for signed less then
+- `(<+)` for signed less than
 
 An operation that ends in a `+` treats is operands a signed, while
-one that end in a `:` treats it's operands as unsigned.
+one that end in a `:` treats its operands as unsigned.
 
 Many operators are agnostic to signedness. The addition operator
 `(+:)` is an example of this. The reason for this is that the addition
@@ -141,7 +141,7 @@ or unsigned will lead to the same result.
 
 # API tour
 
-The following describes a number of key functions. See the
+The following describes several key functions. See the
 documentation for
 [`Comb.S`](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Comb/module-type-S/index.html)
 for other useful functions.
@@ -157,7 +157,7 @@ the arguments.
 - `(*:)` unsigned multiplication
 - `(*+)` signed multiplication
 
-The arguments can be of arbitrary widths. The result will be the sum
+The arguments can have arbitrary widths. The result will be the sum
 of the widths of the arguments.
 
 ## Logical
@@ -244,14 +244,14 @@ holds the most significant bit or least significant bit respectively.
 
 # Integer arguments
 
-Various operators can take an integer as their right hand argument.
+Various operators can take an integer as their right-hand argument.
 
 ```ocaml
 # of_string "011" +:. 1
 - : t = 100
 ```
 
-The right hand argument will be converted to a vector by inferring the
-required width from the left hand argument.
+The right-hand argument will be converted to a vector by inferring the
+required width from the left-hand argument.
 
 Such operators are suffixed with a `.`.
