--- a/docs/installing_with_opam.mdx
+++ b/docs/installing_with_opam.mdx
@@ -8,9 +8,9 @@ opam install hardcaml hardcaml_waveterm ppx_deriving_hardcaml
 ```
 
 This will install the core Hardcaml library, a waveform viewer which
-is helpful for buiding tests, and the hardcaml ppx.
+is helpful for building tests, and the hardcaml ppx.
 
-To access the lastest packages or most up to date version you may want
+To access the lastet packages or the most up-to-date version you may want
 to try the Jane Street bleeding edge opam repository.
 
 ```
