--- a/docs/module_hierarchy.mdx
+++ b/docs/module_hierarchy.mdx
@@ -22,9 +22,9 @@ This builds upon [instantiation](instantiation.mdx) and
 Module hierarchies provide the following benefits:
 
 - Controls the naming of signals within the design hierarchy.
-  - Timing reports / logic utilization reports from backend vendor
+  - Timing reports/logic utilization reports from backend vendor
     tools will be much easier to comprehend.
-  - Allows better organistation of waveforms which can group signals
+  - Allows better organisation of waveforms which can group signals
     according to the module hierarchy.
 - Reduces the size of the generated RTL file, where there is
   substantial logic duplication.
@@ -53,7 +53,7 @@ end
 
 We define an input and output interface and a `create` function that
 creates the hardware logic. We also pass it a scope argument. The
-`hierarchical` function is mechanically derivied from the `create`
+`hierarchical` function is mechanically derived from the `create`
 function.
 
 ```ocaml
@@ -95,7 +95,7 @@ Compared to the non-hierarchical design flow all we need to do is
 - Pass a [`Scope.t`](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Scope/index.html) argument.
 - Define the `hierarchical` function using the `Hierarchy.In_scope`
   functor.
-- Call `hierarchical` when we instantiate the it.
+- Call `hierarchical` when we instantiate it.
 
 Hardcaml will detect when (structurally) equivalent circuits are
 instantiated and generate a single Verilog (or VHDL) module for them.
@@ -134,7 +134,7 @@ of the waveform viewer.
 
 When we create a scope, we can choose how it should treat
 sub-circuits. By default, a hierarchical design is created. If we pass
-`flatten_design:true` then instead all sub-circuits will inlined into
+`flatten_design:true` then instead all sub-circuits will be inlined into
 their parents.
 
 ## Simulation
