--- a/docs/simulating_with_interfaces.mdx
+++ b/docs/simulating_with_interfaces.mdx
@@ -52,7 +52,7 @@ let create (i : Signal.t I.t) : Signal.t O.t =
 To simulate this, we can use the
 [`Cyclesim.With_interface`](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Cyclesim/With_interface/index.html)
 functor. This will automatically create a circuit with the input and output
-ports labelled, build a simulator, then construct input and output
+ports labelled, build a simulator, and then construct input and output
 records for driving the simulator. All this and we never have to worry
 about the underlying string names of ports.
 
@@ -64,7 +64,7 @@ about the underlying string names of ports.
 val create_sim : unit -> (Bits.t ref I.t, Bits.t ref O.t) Cyclesim.t = <fun>
 ```
 
-Notice the type signature of `(_, _) Cyclesim.t`. The parameteric type
+Notice the type signature of `(_, _) Cyclesim.t`. The parametric type
 arguments to [`Cyclesim.t`](https://ocaml.janestreet.com/ocaml-core/latest/doc/hardcaml/Hardcaml/Cyclesim/index.html)
 encode the types returned when retrieving the
 inputs and output values from the simulator object.
